--- a/features/org.eclipse.recommenders.privacy.rcp.feature/pom.xml
+++ b/features/org.eclipse.recommenders.privacy.rcp.feature/pom.xml
@@ -6,10 +6,11 @@
 	<parent>
 		<groupId>org.eclipse.recommenders.privacy</groupId>
 		<artifactId>features</artifactId>
-		<version>0.1.0-SNAPSHOT</version>
+		<version>0.1.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>org.eclipse.recommenders.privacy.rcp.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
+<version>0.1.0-SNAPSHOT</version>
 </project>
