--- a/plugins/org.eclipse.recommenders.privacy.heartbeat.rcp/pom.xml
+++ b/plugins/org.eclipse.recommenders.privacy.heartbeat.rcp/pom.xml
@@ -6,10 +6,11 @@
 	<parent>
 		<groupId>org.eclipse.recommenders.privacy</groupId>
 		<artifactId>plugins</artifactId>
-		<version>0.1.0-SNAPSHOT</version>
+		<version>0.1.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>org.eclipse.recommenders.privacy.heartbeat.rcp</artifactId>
 	<packaging>eclipse-plugin</packaging>
+<version>0.1.0-SNAPSHOT</version>
 </project>
