--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.eclipse.recommenders.privacy</groupId>
 	<artifactId>aggregator</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.1.0</version>
 	<packaging>pom</packaging>
 
 	<name>Aggregator for Code Recommenders Privacy Preferences</name>
