--- a/releng/licenses/pom.xml
+++ b/releng/licenses/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>org.eclipse.recommenders.privacy</groupId>
 	<artifactId>licenses</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.1.0</version>
 
 	<repositories>
 		<repository>
