--- a/tests/org.eclipse.recommenders.privacy.rcp.tests/pom.xml
+++ b/tests/org.eclipse.recommenders.privacy.rcp.tests/pom.xml
@@ -6,10 +6,11 @@
 	<parent>
 		<groupId>org.eclipse.recommenders.privacy</groupId>
 		<artifactId>tests</artifactId>
-		<version>0.1.0-SNAPSHOT</version>
+		<version>0.1.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>org.eclipse.recommenders.privacy.rcp.tests</artifactId>
 	<packaging>eclipse-test-plugin</packaging>
+<version>0.1.0-SNAPSHOT</version>
 </project>
