--- a/repositories/pom.xml
+++ b/repositories/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>org.eclipse.recommenders.privacy</groupId>
 	<artifactId>repositories</artifactId>
-	<version>0.1.0</version>
+	<version>0.2.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Update Sites</name>
@@ -22,7 +22,7 @@
 	</modules>
 
 	<properties>
-		<privacyVersion>0.1.0</privacyVersion>
+		<privacyVersion>0.2.0-SNAPSHOT</privacyVersion>
 		<simrel>luna</simrel>
 	</properties>
 
