--- a/targets/pom.xml
+++ b/targets/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>org.eclipse.recommenders.privacy</groupId>
 	<artifactId>targets</artifactId>
-	<version>0.1.0</version>
+	<version>0.2.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Targets Definitions</name>
