[preferences] Bug 460763: keep all preferences under $PLUGIN_ID.prefs
Change-Id: I8774b847d122aed1e292d00844ae8453fc041288
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>

--- a/plugins/org.eclipse.recommenders.privacy.rcp/plugin.xml
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/plugin.xml
@@ -20,7 +20,7 @@
 			name="%preferenceTransfer.permissions.name">
 			<description>%preferenceTransfer.permissions.description</description>
 			<mapping scope="instance">
-				<entry node="org.eclipse.recommenders.privacy.rcp.permissions"/>
+				<entry node="org.eclipse.recommenders.privacy.rcp/approval"/>
 			</mapping>
 		</transfer>
 	</extension>
