[api] Add Privacy predefined datum ids to the API.
Change-Id: Id9b727f6a9337704a986ba5bcaa1f9b2498820b4
Signed-off-by: Yasser Aziza <yasser.aziza@gmail.com>

--- a/plugins/org.eclipse.recommenders.privacy.rcp/plugin.xml
+++ b/plugins/org.eclipse.recommenders.privacy.rcp/plugin.xml
@@ -41,6 +41,9 @@
 			icon="icons/obj16/anonymousId.gif"
 			name="%datums.anonymousId.name"
 			description="%datums.anonymousId.description"/>
+		<datum id="org.eclipse.recommenders.privacy.rcp.datums.email"
+			name="%datums.email.name"
+			description="%datums.email.description"/>
 	</extension>
 	<extension point="org.eclipse.ui.startup">
 		<startup class="org.eclipse.recommenders.internal.privacy.rcp.Startup"/>
