--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -72,6 +72,7 @@
 							<validHeaders>
 								<validHeader>header-aziza-2014.txt</validHeader>
 								<validHeader>header-codetrails-2014.txt</validHeader>
+								<validHeader>header-codetrails-2015.txt</validHeader>
 							</validHeaders>
 						</configuration>
 					</execution>
