--- a/repositories/head/pom.xml
+++ b/repositories/head/pom.xml
@@ -13,5 +13,27 @@
 	<artifactId>head</artifactId>
 	<packaging>eclipse-repository</packaging>
 
-	<name>Privacy Preferences (Incubator) Milestones Update Site</name>
+	<name>Privacy Preferences (Incubator) Head Update Site</name>
+
+	<profiles>
+		<profile>
+			<id>build-server</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.eclipse.tycho.extras</groupId>
+						<artifactId>tycho-eclipserun-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>add-p2-mirrors-url-property</id>
+								<configuration>
+									<skip>true</skip>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
