[api] Allow plugins to suggest an approval state for a permission
Bug: 472169
Change-Id: I9343be0f21c5dec64de4d494bd379d5c93a1ba4e
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>

--- a/plugins/org.eclipse.recommenders.privacy.example.rcp/plugin.xml
+++ b/plugins/org.eclipse.recommenders.privacy.example.rcp/plugin.xml
@@ -12,6 +12,7 @@
 			policyUri="http://www.example.org/policy/heartbeat"
 			principalId="org.eclipse.recommenders.privacy.example.rcp.principals.example"
 			purpose="%permissions.heartbeat.purpose"
+			suggestApproval="true"
 			configurationDialogFactory="org.eclipse.recommenders.internal.privacy.example.rcp.dialogs.HeartbeatConfigurationFactory"/>
 		<permission
 			datumId="org.eclipse.recommenders.privacy.rcp.datums.anonymousId"
