[releng] Fix p2 mirror and stats URIs
Bug: 479304
Change-Id: Icb650688c3cd5e58e975ea024b2b4793a1c9712b
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>

--- a/repositories/pom.xml
+++ b/repositories/pom.xml
@@ -23,7 +23,10 @@
 
 	<properties>
 		<privacyVersion>0.2.0-SNAPSHOT</privacyVersion>
-		<simrel>luna</simrel>
+		<simrel>mars</simrel>
+		<p2MirrorsURL>http://www.eclipse.org/downloads/download.php?file=/recommenders.incubator/privacy/updates/${project.artifactId}&amp;format=xml</p2MirrorsURL>
+		<p2StatsURL>http://download.eclipse.org/stats/recommenders.incubator/privacy/${project.artifactId}</p2StatsURL>
+		<statsTrackedArtifacts>org.eclipse.recommenders.privacy.3rd.feature,org.eclipse.recommenders.privacy.example.rcp.feature,org.eclipse.recommenders.privacy.rcp.feature</statsTrackedArtifacts>
 	</properties>
 
 	<repositories>
