--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -24,7 +24,7 @@
 
 	<properties>
 		<privacyVersion>0.2.0-SNAPSHOT</privacyVersion>
-		<simrel>luna</simrel>
+		<simrel>mars</simrel>
 	</properties>
 
 	<repositories>
