--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -22,7 +22,7 @@
 
 	<properties>
 		<privacyVersion>0.2.0-SNAPSHOT</privacyVersion>
-		<simrel>luna</simrel>
+		<simrel>mars</simrel>
 	</properties>
 
 	<repositories>
