--- a/targets/pom.xml
+++ b/targets/pom.xml
@@ -20,6 +20,7 @@
 		<module>kepler</module>
 		<module>luna</module>
 		<module>mars</module>
+		<module>neon</module>
 	</modules>
 
 	<repositories>
