[releng] Fix Maven <repository> ID
A name clash was introduced recently, as repo.eclipse.org is now used
within the HIPP's settings.xml. See
<https://repo.eclipse.org/content/repositories/recommenders-releases/>
for background.

Change-Id: I1b92bead87f10e4e2b231ea66ea1e449956bd7d6
Signed-off-by: Andreas Sewe <andreas.sewe@codetrails.com>

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -28,14 +28,15 @@
 
 	<repositories>
 		<repository>
-			<id>repo.eclipse.org</id>
-			<url>https://repo.eclipse.org/content/repositories/recommenders/</url>
+			<id>recommenders-releases</id>
+			<url>https://repo.eclipse.org/content/repositories/recommenders-releases/</url>
 		</repository>
 	</repositories>
+	<!-- Plugin repositories are also used to locate plugin dependencies. -->
 	<pluginRepositories>
 		<pluginRepository>
-			<id>repo.eclipse.org</id>
-			<url>https://repo.eclipse.org/content/repositories/recommenders/</url>
+			<id>recommenders-releases</id>
+			<url>https://repo.eclipse.org/content/repositories/recommenders-releases/</url>
 		</pluginRepository>
 	</pluginRepositories>
 
