--- a/repositories/pom.xml
+++ b/repositories/pom.xml
@@ -30,8 +30,8 @@
 
 	<repositories>
 		<repository>
-			<id>repo.eclipse.org</id>
-			<url>https://repo.eclipse.org/content/repositories/recommenders/</url>
+			<id>recommenders-releases</id>
+			<url>https://repo.eclipse.org/content/repositories/recommenders-releases/</url>
 		</repository>
 	</repositories>
 
