--- a/targets/pom.xml
+++ b/targets/pom.xml
@@ -25,8 +25,8 @@
 
 	<repositories>
 		<repository>
-			<id>repo.eclipse.org</id>
-			<url>https://repo.eclipse.org/content/repositories/recommenders/</url>
+			<id>recommenders-releases</id>
+			<url>https://repo.eclipse.org/content/repositories/recommenders-releases/</url>
 		</repository>
 	</repositories>
 </project>
